# Fifi

./: BadWords.txt  LICENSE  README.md  battle_db.json  bot.py  context.py  database.json  example.draw  main.py  pyproject.toml  requirements.txt  startServer.py  whitelist.json
.github/ISSUE_TEMPLATE/: bug-report.md
.github/workflows/: codeql-analysis.yml
cogs/: battlefield.py  currency.py  music.py  owner.py  reddit.py  wc.py  webhook.py
templates/: botInvite.html  main.html  unknown.html
