[tool.poetry]
name = "repl_python3_Fifi"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
humanize = "^3.4.1"
praw = "^7.2.0"
replit = "^3.0.0"
aiohttp = "^3.7.4"
discord = "^1.0.1"
Flask = "^2.0.1"
DiscordUtils = "^1.2.9"
ujson = "^4.0.2"
gevent = "^21.1.2"
mako = "^1.1.4"
pytest = "^6.2.4"
sets = "^0.3.2"
tornado = "^6.1"
twisted = "^21.2.0"
asyncpg = "^0.23.0"
jishaku = "^2.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
